--- a/admin/src/assets/css/page.scss
+++ b/admin/src/assets/css/page.scss
@@ -47,6 +47,11 @@ body{
   }
 }
 
-.login-view{
-
+.page-block{
+  margin-top: 20px;
+  text-align: right;
 }
+.el-table__header{
+  width: 100% !important;
+}
+
