完善小程序的主页

--- a/admin/src/assets/css/page.css
+++ b/admin/src/assets/css/page.css
@@ -138,7 +138,8 @@ body {
 
 .page-block {
   margin-top: 20px;
-  text-align: right; }
+  text-align: right;
+  margin-bottom: 20px; }
 
 .el-table__header {
   width: 100% !important; }
