--- a/admin/src/assets/css/page.scss
+++ b/admin/src/assets/css/page.scss
@@ -52,6 +52,7 @@ body{
 .page-block{
   margin-top: 20px;
   text-align: right;
+  margin-bottom: 20px;
 }
 .el-table__header{
   width: 100% !important;
